<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">이거어때</string>
    <string name="menu_search">검색</string>
    <string name="menu_item_search_action_hint"></string>
    <string name="menu_item_search_action_menu_text">검색</string>
    <string name="action_settings">Settings</string>
    <string name="tab_random">Random</string>
    <string name="category_adult">성인</string>
    <string name="category_music">음악</string>
    <string name="category_food">음식</string>
    <string name="category_humor">유머</string>
    <string name="category_travel">여행</string>
    <string name="category_fashion">패션</string>
    <string name="category_news">뉴스</string>
    <string name="title_activity_show_image">크게 보기</string>
    <string name="trackTitle">노래제목</string>
    <string name="artistName">가수</string>
    <string name="listen">듣기</string>
    <string name="add">추가</string>
    <string name="lyrics">가사</string>
    <string name="title_activity_recommended_track_list">추천음악</string>
    <string name="title_activity_searched_track_list">검색</string>
    <string name="title_activity_music_playlist">플레이리스트</string>
    <string name="clear">전체삭제</string>
    <string name="exit">종료</string>
    <string name="prefs_name">HowaboutPrefsFile</string>
    
    <!-- facebook -->
    <string name="app_id">429667463794371</string>
    <string name="hello_world">Hello world!</string>

</resources>