<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:layout_marginLeft="14dp" >
    
    <ImageView
        android:id="@+id/image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="1dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trackTitle"
            android:singleLine="true"
            android:textColor="#444444"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artistName"
            android:singleLine="true"
            android:textColor="#777777"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
    </LinearLayout>

</LinearLayout>
