<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/RootView" >

    <LinearLayout
        android:id="@+id/itemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/app_name"
                android:minHeight="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" >

                <Button
                    android:id="@+id/listenTrackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonStyleSmall"
                    android:textColor="#666666"
                    android:textStyle="bold"
                    android:text="@string/listen"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />

                <Button
                    android:id="@+id/addTrackButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="?android:attr/buttonStyleSmall"
                    android:textColor="#666666"
                    android:textStyle="bold"
                    android:text="@string/add"
                    android:focusable="false" />
            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/trackTitle"
            android:textColor="#444444"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/artistName"
            android:textColor="#777777" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/load"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="center"
        android:visibility="visible" />

</RelativeLayout>